--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "build": "tsc --outDir . src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,10 @@
     "@types/node": "^14.11.10",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "@types/request": "^2.48.5",
+    "node-emoji": "^1.10.0",
+    "request": "^2.88.2"
   }
 }
