Fixed download files synchronization

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@types/request": "^2.48.5",
+    "download": "^8.0.0",
     "node-emoji": "^1.10.0",
     "request": "^2.88.2"
   }
